Add get all chats handler
