# api/swagger/swagger.json
@@ -6,21 +6,21 @@
     "paths": {
         "/api/v1/chats": {
             "get": {
-                "description": "Prints all active chats id and name",
+                "description": "Prints all chats id and name",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Chats"
                 ],
-                "summary": "Get all active chats",
+                "summary": "Get all chats",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/v1.GetActiveChatsResponse"
+                                "$ref": "#/definitions/v1.Chat"
                             }
                         }
                     },
@@ -66,6 +66,41 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/v1.CreateChatResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/chats/active": {
+            "get": {
+                "description": "Prints all active chats id and name",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Get all active chats",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/v1.Chat"
+                            }
                         }
                     },
                     "400": {
@@ -206,6 +241,17 @@
         }
     },
     "definitions": {
+        "v1.Chat": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.CreateChatRequest": {
             "type": "object",
             "properties": {
@@ -240,17 +286,6 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.GetActiveChatsResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "name": {
                     "type": "string"
                 }
             }
