# internal/controllers/http/ws/v1/response_dto.go
@@ -12,7 +12,7 @@ type LoginUserResponse struct {
 	Token string `json:"token"`
 }
 
-type GetActiveChatsResponse struct {
+type Chat struct {
 	ID   string `json:"id"`
 	Name string `json:"name"`
 }
